@@ -1,8 +1,8 @@
 package com.github.euler.file;
 
-import java.util.Arrays;
 import java.util.List;
 
+import com.github.euler.configuration.ContextConfigConverter;
 import com.github.euler.configuration.EulerExtension;
 import com.github.euler.configuration.TaskConfigConverter;
 import com.github.euler.configuration.TypeConfigConverter;
@@ -11,7 +11,7 @@ public class FileExtension implements EulerExtension {
 
     @Override
     public List<TypeConfigConverter<?>> typeConverters() {
-        return Arrays.asList(
+        return List.of(
                 new FileSourceConfigConverter(),
                 new FileStorageStrategyConfigConverter(),
                 new FileStreamFactoryConfigConverter(),
@@ -20,7 +20,14 @@ public class FileExtension implements EulerExtension {
 
     @Override
     public List<TaskConfigConverter> taskConverters() {
-        return Arrays.asList(new BasicFilePropertiesTaskConfigConverter());
+        return List.of(new BasicFilePropertiesTaskConfigConverter());
+    }
+
+    @Override
+    public List<ContextConfigConverter> pathConverters() {
+        return List.of(
+                new PathDeleteConfigConverter(),
+                new PathCreateConfigConveter());
     }
 
     @Override
